Fix holidays-report page dropdown padding on mobiles

--- a/sass/blocks/_boss-table.sass
+++ b/sass/blocks/_boss-table.sass
@@ -103,7 +103,7 @@ $block: ".boss-table"
 
     @media screen and (max-width: 960px)
       #{$block}_page_holidays-report &
-        padding: 15px
+        padding: 15px 15px 25px
 
     // $Common table dropdown MOD: state closed
     &_state_closed
